--- a/Votron/AndroidManifest.xml
+++ b/Votron/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+                <activity
+            android:name="com.cj.votron.Elections"
+            android:label="Elections" >
+        </activity>
     </application>
 
 </manifest>
