Dummy elections activity now shows

--- a/Votron/AndroidManifest.xml
+++ b/Votron/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
                 <activity
-            android:name="com.cj.votron.Elections"
+            android:name="com.cj.votron.ElectionsActivity"
             android:label="Elections" >
         </activity>
     </application>
