Added voters screen

--- a/Votron/AndroidManifest.xml
+++ b/Votron/AndroidManifest.xml
@@ -13,19 +13,26 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
         <activity
             android:name="com.cj.votron.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-                <activity
+        
+        <activity
             android:name="com.cj.votron.ElectionsActivity"
             android:label="Elections" >
         </activity>
+        
+        <activity
+            android:name="com.cj.votron.VotersActivity"
+            android:label="Voters" >
+        </activity>
+        
     </application>
 
 </manifest>
