Added debug screen

--- a/Votron/AndroidManifest.xml
+++ b/Votron/AndroidManifest.xml
@@ -33,6 +33,16 @@
             android:label="Voters" >
         </activity>
         
+                <activity
+            android:name="com.cj.votron.VotersActivity"
+            android:label="Voters" >
+        </activity>
+        
+        <activity
+            android:name="com.cj.votron.DebugActivity"
+            android:label="Debug" >
+        </activity>
+        
     </application>
 
 </manifest>
